# wallet_test

./: README.md  pyproject.toml
wallet/wallet/: settings.py  urls.py
wallet/wallet_app/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
wallet/wallet_app/migrations/: 0001_initial.py
