[tool.poetry]
name = "garant-park-test"
version = "0.1.0"
description = ""
authors = ["dmsidorov <d.m.sidorov@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "4.2.9"
black = "^24.1.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

